syntax = "proto3";

package pb;

option go_package = "github.com/chensheep/simple-bank-backend/pb";

message VerifyEmailRequest {
    int64 email_id = 1;
    string secret_code = 2;
}

message VerifyEmailResponse {
    bool is_verified = 1;
}